# Sparrow

./: .gitattributes  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  default.ini  imgui.ini  log_book.txt
SparrowTemplate/Scenes/: 1.json  2.json  2023-05-14-19-53-02.json  2023-05-14-20-06-07.scene  2023-05-20-01-33-42.scene  3.json  scene.json
SparrowTemplate/Shaders/: FXAA.frag  Gauss.frag  P_shadowMap.frag  cubeMap.vert  pbrShadow.frag  ui.frag
lua/: MainCamera.lua  MantisModel.lua
resources/icons/: anim.dds  cpp.dds  doc.dds  fbx.dds  file.dds  gltf.dds  h.dds  json.dds  lua.dds  mesh.dds  (+1 more)
src/: CMakeLists.txt  CmakeLists.txt
src/core/: CMakeLists.txt  SparrowCore.h
src/core/Animation/: AnimDefinitions.h
src/core/ApplicationFramework/: AppDelegate.h  CMakeLists.txt
src/core/ApplicationFramework/Application/: Application.cpp  Application.h  CMakeLists.txt
src/core/ApplicationFramework/WindowI/: CMakeLists.txt  WindowEvent.h  WindowI.h
src/core/Asset/: Asset.hpp  AssetDataSupport.inl  BasicMeshStorage.hpp  CMakeLists.txt
src/core/Asset/AssetData/: AnimationClip.cpp  AnimationClip.h  AnimationData.h  AssetData.h  MaterialData.h  Mesh.h  MeshData.h  ModelData.h  Vertex.h
src/core/Asset/AssetManager/: AssetManager.cpp  AssetManager.h
src/core/Asset/ModelLoader/: ModelLoader.cpp  ModelLoader.h
src/core/Asset/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/core/Asset/Serializer/: EntitySerializer.cpp  EntitySerializer.h
src/core/Control/: CMakeLists.txt  KeyCodes.h  KeyEvent.hpp  MouseCodes.h  MouseEvent.hpp
src/core/EcsFramework/: CMakeLists.txt  Scene.hpp
src/core/EcsFramework/Component/: CMakeLists.txt  COmponentTypes.h  CameraComponent.hpp  ComponentI.h  KeyComponent.hpp  LightComponent.hpp  MeshComponent.hpp  ModelComponent.h  MouseComponent.hpp  TransformComponent.hpp
src/core/EcsFramework/Component/AnimationComponent/: AnimationComponent.h  CMakeLists.txt
src/core/EcsFramework/Component/Audio/: AudioComponent.h  AudioListener.h  CMakeLists.txt
src/core/EcsFramework/Component/BasicComponent/: CMakeLists.txt  IDComponent.h  NameComponent.h
src/core/EcsFramework/Component/Lights/: CMakeLists.txt  DirectionalLightComponent.hpp  PointLightComponent.hpp
src/core/EcsFramework/Component/PhysicalComponent/: CMakeLists.txt  Collider.h  RigidActor.h  RigidDynamicComponent.h  RigidStaticComponent.h
src/core/EcsFramework/Entity/: CMakeLists.txt  Entity.cpp  Entity.h  Entity.hpp
src/core/EcsFramework/System/: CMakeLists.txt  SystemI.h
src/core/EcsFramework/System/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.h  CMakeLists.txt
src/core/EcsFramework/System/AudioSystem/: AudioListenerSystem.cpp  AudioListenerSystem.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt
src/core/EcsFramework/System/ControlSystem/: CMakeLists.txt  KeyControlSystem.hpp  MouseControlSystem.hpp
src/core/EcsFramework/System/NewRenderSystem/: CMakeLists.txt  DefaultRenderPass.hpp  FlexibleRenderSystem.cpp  FlexibleRenderSystem.h  RenderSubPass.hpp  SPWRenderSystem.cpp  SPWRenderSystem.h
src/core/EcsFramework/System/PhysicSystem/: CMakeLists.txt  PhysicSystem.cpp  PhysicSystem.h
src/core/EcsFramework/System/RenderSystem/: CMakeLists.txt  RenderSystem.cpp  RenderSystem.h
src/core/Event/: CMakeLists.txt  Event.cpp  Event.h  Event.hpp  EventDefines.h
src/core/IO/: AttriVertex.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  EntitySerializer.cpp  EntitySerializer.h  FileSystem.cpp  FileSystem.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFactory.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  SerializerUtil.inl  TomlSerializer.cpp  TomlSerializer.h
src/core/IO/LogSystem/: LogSystem.cpp  LogSystem.hpp
src/core/IO/ModelLoader/: OBJLoader.cpp
src/core/IO/RHI/: Definitions.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/core/IO/SOIL2/: CMakeLists.txt  SOIL2.c  common.cpp
src/core/LuaBinding/: CMakeLists.txt  ComponentWrapper.cpp  ComponentWrapper.hpp  EntityWrapper.hpp  RenderWrapper.hpp  SceneWrapper.hpp
src/core/Maths/: CMakeLists.txt  MathUtils.hpp
src/core/Model/: AssimpLoader.cpp  CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vertex.h
src/core/Model/Animation/: AnimDefinitions.h  CMakeLists.txt  Skeleton.h
src/core/Physics/: CMakeLists.txt  PhysicMaterial.cpp  PhysicMaterial.h  SimulationEventCallback.h  physic_error_call_back.h
src/core/Render/: AttachmentTexture.h  CMakeLists.txt  DefaultRenderPass.hpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.h  PipeLine.hpp  Render.cpp  Render.h  RenderAPII.h  RenderBackEndI.h  RenderCommand.hpp  RenderCommandsQueue.hpp  RenderGraph.hpp  RenderGraphManager.cpp  RenderGraphManager.h  RenderPass.hpp  StorageBuffer.h  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h  shader.cpp  shader.h
src/core/UI/: CMakeLists.txt  UIButton.hpp  UILabel.hpp  UIResponder.hpp
src/core/Utils/: CMakeLists.txt  Debounce.hpp  MacroUtils.h  MessageCenter.hpp  MessageDefines.h  SingletonBase.h  ThreadPool.h  Timer.hpp  UUID.hpp
src/editor/: CMakeLists.txt  SparrowEditor.h
src/editor/ImGui/: CMakeLists.txt  IconsFontAwesome6.h  ImGuiDefinitions.h  ImGuiEvent.hpp  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiIcon.hpp  ImGuiIconManager.hpp  ImGuiManager.cpp  ImGuiManager.hpp
src/editor/ImGui/ImGuiMessageBox/: ImGuiMessageBox.cpp  ImGuiMessageBox.h
src/editor/ImGui/UIComponent/: ImGuiAssetInspectorPanel.h  ImGuiDockSpace.h  ImGuiEntityPanel.cpp  ImGuiEntityPanel.h  ImGuiFileDialogPanel.h  ImGuiFileExplorer.cpp  ImGuiFileExplorer.h  ImGuiImagePanel.h  ImGuiInspectorPanel.cpp  ImGuiInspectorPanel.h  ImGuiLog.h  ImGuiMenuBar.h  ImGuiObjectPanel.h  ImGuiPanel.h  ImGuiProfilingPanel.h  ImGuiTreeNodePanel.h  ImGuiWindow.h
src/editor/SOIL2/: CMakeLists.txt
src/examples/: CMakeLists.txt  CmakeLists.txt  Render.h  SPWEOfflineToolTest.cpp  SPWEditorTest.cpp  SPWNewRSTest.cpp  SPWOfflineTest.cpp  SPWPhysicsTest.cpp  SPWSceneTest.cpp  SPWSoundTest.cpp  SPWTestApp.cpp  SimpleRender.h  simpleVs.vert
(+158 files in other folders)
